@@ -13,6 +13,9 @@ User changes
 Bug fixes
 ---------
 
+- Fix link with user functions for movable builds linking directly with
+  Catalyst (e.g. Salome_CFD).
+
 - GUI: fix handling of exchange coefficient boundary conditions.
 
 - Fix automatic installer crash due to malformed string format.
